<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">炒股大赛</string>
    <string name="login_loading" tools:ignore="TypographyEllipsis">正在登录...</string>
    <string name="err_input_name">请输入用户名</string>
    <string name="err_input_true_name">请输入真实姓名</string>
    <string name="err_input_pass">请输入密码</string>
    <string name="err_input_phone">请输入手机号</string>
    <string name="err_input_phone1">请输入正确的手机号</string>
    <string name="err_input_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="create_match">已成功举办%1$d场比赛</string>
    <string name="match_player">共%1$d人参赛</string>
    <string name="match_players">%1$d人</string>
    <string name="match_pays">魔方宝%1$d</string>
    <string name="match_detail_players">参赛人数：%1$d人</string>
    <string name="match_detail_date">比赛时间：%1$s至%2$s</string>
    <string name="match_detail_rank">第%1$d名</string>
    <string name="match_detail_money">%1$d</string>
    <string name="match_win_player">在%1$d名选手中战胜%2$d人</string>
    <string name="match_dieal_stock">%1$s %2$s %3$s(%4$s)</string>
    <string name="rank">名次</string>
    <string name="match_rank">排行榜</string>
    <string name="match">比赛</string>
    <string name="drill">训练</string>
    <string name="stock">自选股</string>
    <string name="match_desc_title">比赛简介</string>
    <string name="match_desc_award">暂无奖品信息</string>
    <string name="match_apply_date">报名时间：%1$s至%2$s</string>
    <string name="match_start_date">比赛时间：%1$s至%2$s</string>
    <string name="match_money">比赛起始资金：%1$s</string>
    <string name="match_is_player">已参赛</string>
    <string name="match_is_not_player">未参赛</string>
    <string name="match_is_over">已结束</string>
    <string name="match_apply_over">报名结束</string>
    <string name="match_join">报名参赛</string>
    <string name="match_join_success">报名成功</string>
    <string name="apply_tip1">填写比赛报名信息</string>
    <string name="apply_tip2">建议填写真实信息，便于奖品发放</string>
    <string name="match_desc">交易品种：仅限沪深A股、创业板股票。特殊比赛如“分级基金”、“股指期货”等例外；
\n\n委托时间：每个交易日里，15:01-16:00不能委托，其余时间都可以委托；非交易时间的委托在下一个交易时间生效；
\n\n交易时间：虚拟盘交易时间与交易所规定的交易时间相同。</string>
    <string name="match_hold_title">持仓</string>
    <string name="match_hold_stock_name">名称</string>
    <string name="match_trader_info">操盘高手</string>
    <string name="trader_join_date" formatted="false">%1$s加入资本魔方</string>
    <string name="phone_no">手机号</string>
    <string name="password">密码(数字和字母组合)</string>
    <string name="code">验证码</string>
    <string name="register">注册</string>
    <string name="stock_index_1">上证指数</string>
    <string name="stock_index_2">深圳指数</string>
    <string name="stock_index_3">创业板指</string>
    <string name="hold_competition">我要举办比赛</string>
    <string name="recommend_competition">推荐比赛</string>
    <string name="award_declare">奖品声明</string>
    <string name="match_intro">比赛介绍</string>
    <string name="match_award">比赛奖品</string>
    <string name="ranking_list">排行榜</string>
    <string name="bjs">北京大学</string>
    <string name="gdcxkj">广东创新科技</string>
    <string name="gdkjxy">广东科技学院</string>
    <string name="gtjnzq">国泰君安证券</string>
    <string name="gyzq">国元证券</string>
    <string name="hns">湖南大学</string>
    <string name="qhs">清华大学</string>
    <string name="qkw">期刊网</string>
    <string name="qlzq">齐鲁证券</string>
    <string name="shsf">上海师范大学</string>
    <string name="shzf">上海政法大学</string>
    <string name="xncs">西南财经大学</string>
    <string name="zj">中国计量学院</string>
    <string name="zjgss">浙江工商大学</string>
    <string name="zjlgs">浙江理工大学</string>
    <string name="zjzq">中金证券</string>
    <string name="zszq">招商证券</string>
    <string name="zxzq">中信证券</string>
    <string name="zyzq">中原证券</string>
    <string name="zzf">中国政法大学</string>
    <string name="cancel">取消</string>
    <string name="hintEt">请输入比赛名称</string>
    <string name="week_yield">本周人均收益</string>
    <string name="answer">答案</string>
    <string name="question">问题</string>
    <string name="real_name">真实姓名</string>
    <string name="phone_or_username">用户名</string>
    <string name="apply_match">报名参赛</string>
    <string name="had">已有</string>
    <string name="join">人参加</string>
    <string name="reverfiy">重新验证</string>
    <string name="miao">S</string>
    <string name="load_fail">加载失败</string>
    <string name="invite_code">邀请码</string>
    <string name="saveTime">存续期（天）</string>
    <string name="dealCount">交易次数</string>
    <string name="win_rate">胜率</string>
    <string name="totle_earn_rate">总收益率</string>
    <string name="count_win_pan">累计跑赢大盘</string>
    <string name="period_rise_pan">周期大盘增长</string>
    <string name="account_asset">账户资产</string>
    <string name="current_holder_position_count">当前持仓数</string>
    <string name="holder_position_rate">持仓比</string>
    <string name="data_update_rule">数据更新规则：交易日18时后更新</string>
    <string name="holder_position_stock">持仓股票</string>
    <string name="subscrib_after_check">订阅后可查看</string>
    <string name="stock_name">股票名称</string>
    <string name="stock_count">总股数</string>
    <string name="cost_price">成本价</string>
    <string name="break_even">盈亏比例</string>
    <string name="check_full">查看完整持仓</string>
    <string name="no_holder_position">暂无持仓</string>
    <string name="last_record">最新成交记录</string>
    <string name="check_full_record">查看全部记录</string>
    <string name="noun_explain">名词解释</string>
    <string name="no_duty">免责声明：</string>
    <string name="data_from_drill">数据来源于资本魔方模拟炒股训练场</string>
    <string name="subscrib_after_check_record">订阅后可查看操盘记录</string>
    <string name="subscrib">订阅</string>
    <string name="combat_gains">操盘战绩</string>
    <string name="buy_mofangbao">查看该股需要支付99魔方宝</string>
    <string name="check_tip">注意:所有操作仅供参考交流,订阅后不退不换，请确认</string>
    <string name="balance_mofangbao">当前账户余额0.00魔方宝</string>
    <string name="affirm_pay">确认支付</string>
    <string name="deal_title">交易记录</string>
    <string name="avatar">头像</string>
    <string name="nick">昵称</string>
    <string name="add_nick">添加你的昵称</string>
    <string name="my_infomation">我的资料</string>
    <string name="all">全部</string>
    <string name="half">1/2</string>
    <string name="buy_enter">买入</string>
    <string name="sell">卖出</string>
    <string name="buy_enter_count">买入量</string>
    <string name="buy_price">买入价格</string>
    <string name="stock_code">股票代码</string>
    <string name="can_buy_number">可买:</string>
    <string name="can_sell_number">可卖:</string>
    <string name="no_data">暂无数据</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_entrust">委托买入</string>
    <string name="sell_entrust">委托卖出</string>
    <string name="buy_enter_knockdown">买入成交</string>
    <string name="sell_knockdown">卖出成交</string>
    <string name="chedan">撤单</string>
    <string name="chuquan">除权</string>
    <string name="zbmf">资本魔方</string>
    <string name="cancel_share">取消分享</string>
    <string name="qq">QQ</string>
    <string name="sina_tv">新浪微博</string>
    <string name="we_chat_friends">微信好友</string>
    <string name="we_chat_circle">微信朋友圈</string>
    <string name="weibosdk_share_webpage_template"> %1$s ，分享自 #资本魔方炒股圈子# </string>
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="loading" tools:ignore="TypographyEllipsis">加载中...</string>
    <string name="hard_loading" tools:ignore="TypographyEllipsis">努力加载中...</string>
    <string name="add_stock">添加自选股</string>
    <string name="add_stock_et_hint">请输入股票名称/代码</string>
    <string name="add_stock_remark">请输入备注内容</string>
    <string name="query">查询</string>
    <string name="add_stock_symbol_tip">股票代码不能为空</string>
    <string name="exists">已经存在</string>
    <string name="remark">备注</string>
    <string name="input_remark" tools:ignore="TypographyEllipsis">请输入新的备注内容...</string>
    <string name="warn_tip">备注内容不能为空!</string>
    <string name="adding" tools:ignore="TypographyEllipsis">正在添加...</string>
    <string name="ok" tools:ignore="ButtonCase">ok</string>
    <string name="add_remark_success">新增成功</string>
    <string name="err_stock_code_tip">请填入正确的股票代码</string>
    <string name="ask_dong_mi">问董秘</string>
    <string name="ce_buy">策略跟买</string>
    <string name="moni_buy">模拟跟买</string>
    <string name="answer_dong_mi">董秘问答</string>
    <string name="stocker_meet">股民交流</string>
    <string name="share">分享</string>
    <string name="publish">发表</string>
    <string name="publish_comment" tools:ignore="TypographyEllipsis">发表个股评论和投资理念...</string>
    <string name="publishing" tools:ignore="TypographyEllipsis">发表中...</string>
    <string name="stock_comment_empty_tip">评论内容不能为空！</string>
    <string name="no_comments">暂无评论</string>
    <string name="run_tactics">奔跑吧策略</string>
    <string name="one_three">1/3</string>
    <string name="add_allite">0.01</string>
    <string name="more">更多</string>
    <string name="trader">操盘高手</string>
    <string name="city_match">城市比赛</string>
    <string name="sbmf_group_tip">此功能只对\"资本魔方炒股圈子\"开放</string>
    <string name="wait">稍后再说</string>
    <string name="load_app">下载app</string>
    <string name="mfb">魔方宝</string>
    <string name="load_group_app">前往应用市场下载\"资本魔方炒股圈子\"</string>
    <string name="my_order">我的委托</string>
    <string name="revoke">撤单</string>
    <string name="record">交易记录</string>
    <string name="all_money">总资产</string>
    <string name="all_sy">总收益</string>
    <string name="ranking">排名</string>
    <string name="record_count">共获奖12次</string>
    <string name="record_tip1">暂无获奖记录</string>
    <string name="win_prize">获奖记录</string>
    <string name="gain">获得</string>
    <string name="no_award">暂无获奖纪录</string>
    <string name="pay">充值</string>
    <string name="share_fail">分享失败</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="invite_share_title">我在资本魔方模拟炒股等你来挑战！</string>
    <string name="appled_match">已参赛</string>
    <string name="no_appled_match">报名参赛</string>
    <string name="comment_commit">评论提交中...</string>
    <string name="commit">提交</string>
    <string name="notice">公告</string>
    <string name="notice_content">公告内容</string>
    <string name="select_pics">选择图片</string>
    <string name="tzke_pic">拍照</string>
    <string name="nick_err_tip">要修改的昵称不能为空</string>
    <string name="pay_dialog_tip">订阅交易记录一个月需要支付</string>
    <string name="mfb_188">188魔方宝</string>
    <string name="pay_dialog_tip_holder">订阅持仓记录一个月需要支付</string>
    <string name="kf">客服</string>
    <string name="qq_kf">QQ客服</string>
    <string name="dh_kf">电话客服</string>
    <string name="exit_tip">确认退出应用吗?</string>
    <string name="exit_cancel">取消</string>
    <string name="exit_confirm">确认</string>
    <string name="holder">持仓</string>
    <string name="win">获奖</string>
    <string name="day_gain_yield">日收益率</string>
    <string name="week_gain_yield">周收益率</string>
    <string name="invite_friends_match">邀请好友参赛</string>
    <string name="user_invalid_login">用户登录失败或已过期</string>
    <string name="invalid_login_err">用户未登录或已过期</string>
    <string name="need_login">登录信息失效,请重新登录</string>
    <string name="niput_phone_tip">请输入合法手机号</string>
    <string name="register_login">该号码已注册，请直接登录</string>
    <string name="saving">保存中...</string>
    <string name="save_success">保存成功</string>
    <string name="agree_protocol">已阅读并接受《炒股签字注册协议》</string>
    <string name="forget_password">忘记密码?</string>
    <string name="forget_tip">注:APP只支持手机号码找回密码，其他方式找回密码请使用网页版。</string>
    <string name="find_password">找回密码</string>
    <string name="login_tip">请先登录</string>
    <string name="searching">搜索中...</string>
    <string name="no_result">没有相应的搜索结果</string>
    <string name="pay_tip">充值请前往“炒股圈子”或资本魔方网站进行完成</string>
    <string name="gk">公开赛</string>
    <string name="invite">邀请赛</string>
    <string name="private_match">私密赛</string>
    <string name="go_to_pay">去充值</string>
</resources>