<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        >

        <Button
            android:id="@+id/share_wx_friend_circle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_select_tran"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/wx_friend_circle"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/we_chat_circle"
            android:textColor="@color/item_message"
            android:textSize="11sp"
            tools:ignore="SmallSp"/>

        <Button
            android:id="@+id/share_wx_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_select_tran"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/wx_friend"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/we_chat_friends"
            android:textColor="@color/item_message"
            android:textSize="11sp"
            tools:ignore="SmallSp"/>

        <Button
            android:id="@+id/share_sina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_select_tran"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/share_sina"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/sina_tv"
            android:textColor="@color/item_message"
            android:textSize="11sp"
            tools:ignore="SmallSp"/>

        <Button
            android:id="@+id/share_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_select_tran"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/shareqq"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/qq"
            android:textColor="@color/item_message"
            android:textSize="11sp"
            tools:ignore="SmallSp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>

    <Button
        android:id="@+id/cause_share"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/button_select_tran"
        android:text="@string/cancel_share"
        android:textColor="#999999"
        />
</LinearLayout>
