<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_bg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:src="@drawable/icon_close_img"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/bottom_tv1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.67"
                android:gravity="right|center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="15dp"
                android:textColor="@color/black_t60"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded"
                tools:text="@string/pay_dialog_tip"/>

            <TextView
                android:id="@+id/bottom_mfb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.33"
                android:gravity="left|center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="15dp"
                android:textColor="@color/err_red"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded"
                tools:text="188魔方宝"/>
        </LinearLayout>

        <TextView
            android:id="@+id/bottom_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/check_tip"
            android:textColor="@color/black_t60"
            android:textSize="13sp"
            tools:text="@string/pay_dialog_tip"/>

        <Button
            android:id="@+id/bottom_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/pay_btn_bg"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/affirm_pay"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/bottom_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/pay_btn_bg"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/go_to_pay"
            android:textSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/bottom_tv3"
            style="@style/bottom_dialog_tv"
            android:layout_marginBottom="10dp"
            android:padding="6dp"
            android:text="@string/balance_mofangbao"/>
    </LinearLayout>
</RelativeLayout>